--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,6 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Portfolio</title>
+  <link rel="stylesheet" href="/css/style.css">
+  <title><%= title %></title>
 </head>
 <body>
+
+  <header>
+    <h1><a href="/"><%= fullName %></a></h1>
+    <nav id="header-nav">
+      <a href="/">Email</a>
+      <a href="/">Instagram</a> 
+    </nav>
+  </header>
