--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,3 +1,7 @@
+body{
+  margin : 0 30px;
+}
+
 header{
   text-align: center;
   font-family: serif;
@@ -18,4 +22,66 @@ header nav{
 h1{
   font-size: 3rem;
   color: #333;
+}
+
+h2{
+  text-align: center;
+  font-size: 2rem;
+  color: #333;
+  margin-top: 3rem;
+}
+
+.portfolio{
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-column-gap: 1rem;
+  margin-top: 2rem;
+}
+
+.picture-row{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 1rem;
+}
+
+.portfolio-item{
+  width: 100%;
+}
+
+img{
+  width: 100%;
+  height: auto;
+  border-radius: 5px;
+  box-shadow: 0 0 10px #333;
+}
+
+footer{
+  margin: 3rem -8px -10px -8px;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  background-color: #333; 
+}
+
+.footer-text{
+  color: aliceblue;
+  text-decoration: none;
+  text-align: center;
+  grid-column: 2;
+}
+
+.footer-content{
+  display: grid;
+  grid-template-columns: 1fr 8fr 1fr;
+  opacity: 0;
+  transition: opacity 2s ease-in-out;
+}
+
+.fade-in{
+  opacity: 1;
+}
+
+.icons{
+  width: 30px;
+  margin: 10px;
 }
