chore: Update CSS styles and server.js, and add contact page

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -46,7 +46,13 @@ h2{
 }
 
 .portfolio-item{
-  width: 100%;
+  width: 95%;
+  opacity: 0;
+  transition: opacity 0.5s ease-out;
+}
+
+.portfolio-item.visible {
+  opacity: 1;
 }
 
 img{
