--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -11,7 +11,7 @@
   <header>
     <h1><a href="/"><%= fullName %></a></h1>
     <nav id="header-nav">
-      <a href="/">Contact</a>
+      <a href="/contact">Contact</a>
       <a target="_blank" href="<%= instagram %>">Instagram</a> 
     </nav>
   </header>
