chore: Update CSS styles for image grid and add image viewer functionality

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -11,4 +11,11 @@
     </div>
   <% }) %>
 </div>
+
+<div id="imageViewer" class="image-viewer" style="display: none;">
+  <span class="close">&times;</span>
+  <span class="nav left">&#10094;</span>
+  <img class="viewer-image" src="" alt="Image viewer">
+  <span class="nav right">&#10095;</span>
+</div>
 <%- include('./partials/footer') %>
