--- a/public/css/style.css
+++ b/public/css/style.css
@@ -3,6 +3,7 @@ body{
 }
 
 header{
+  margin-top: 5rem;
   text-align: center;
   font-family: serif;
 }
@@ -34,19 +35,19 @@ h2{
 .portfolio{
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-column-gap: 1rem;
+  grid-column-gap: 30px;
   margin-top: 2rem;
 }
 
 .picture-row{
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  gap: 1rem;
+  align-items: center;
+  gap: 30px;
 }
 
 .portfolio-item{
-  width: 95%;
+  width: 100%;
   opacity: 0;
   transition: opacity 0.5s ease-out;
 }
@@ -55,11 +56,18 @@ h2{
   opacity: 1;
 }
 
-img{
+.portfolio-item img {
   width: 100%;
   height: auto;
   border-radius: 5px;
   box-shadow: 0 0 10px #333;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  display: block; 
+}
+
+.portfolio-item:hover img {
+  transform: scale(1.05); 
+  box-shadow: 0 0 10px #333; 
 }
 
 footer{
@@ -90,4 +98,55 @@ footer{
 .icons{
   width: 30px;
   margin: 10px;
+}
+
+.image-viewer {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 1000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 30px;
+}
+
+.image-viewer::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: -1;
+}
+
+.viewer-image {
+  opacity: 1; 
+  max-width: 80%;
+  max-height: 80%;
+  object-fit: contain;
+  width: auto;
+  height: auto;
+  position: relative;
+  z-index: 1; 
+}
+
+.nav {
+  cursor: pointer;
+  color: white;
+  font-size: 3rem;
+  user-select: none;
+}
+
+.close {
+  position: absolute;
+  top: 20px;
+  right: 40px;
+  font-size: 3rem;
+  color: white;
+  cursor: pointer;
 }
