chore: Update contact page styling and form functionality

--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,9 +1,9 @@
 <%- include('./partials/header') %>
 
 
-<div class="container">
+<div class="contact-container">
     <h1>Contact</h1>
-    <p>Send us a message!</p>
+    <p>Send me a message!</p>
     <form action="/contact" method="POST">
         <div class="form-group">
             <label for="name">Name</label>
@@ -17,7 +17,7 @@
             <label for="message">Message</label>
             <textarea class="form-control" id="message" name="message" required></textarea>
         </div>
-        <button type="submit" class="btn btn-primary">Send</button>
+        <button type="submit" class="btn">Send</button>
     </form>
 </div>
 
