--- a/public/css/style.css
+++ b/public/css/style.css
@@ -150,3 +150,58 @@ footer{
   color: white;
   cursor: pointer;
 }
+
+
+
+/* Contact Site */
+
+/* Container and Form Styling */
+.contact-container {
+    max-width: 600px; 
+    margin: 50px auto; 
+    padding: 20px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3); 
+    border-radius: 8px; 
+    background: #fff; 
+}
+
+.form-group {
+    margin-bottom: 20px; 
+}
+
+/* Label and Input Styling */
+label {
+    display: block;
+    margin-bottom: .5rem;
+    color: #333; 
+}
+
+.form-control {
+    width: 100%; 
+    padding: 10px; 
+    border: 1px solid #ccc; 
+    border-radius: 4px; 
+    box-sizing: border-box; 
+    transition: border-color 0.3s; 
+    resize: vertical; 
+}
+
+.form-control:focus {
+    border-color: #007bff; 
+    outline: none; 
+}
+
+/* Button Styling */
+.btn {
+    background-color: #007bff; 
+    color: white;
+    padding: 10px 15px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: background-color 0.3s; 
+}
+
+.btn:hover {
+    background-color: #0056b3; 
+}
