chore: Update CSS styles for image grid and image viewer functionality

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
     <div class="picture-row">
       <% row.map((picture) => { %>
       <figure class="portfolio-item">
-        <img src="pictures/<%= picture %>.JPG" alt="Picture<%= picture %>">
+        <img src="pictures/komprimiert/<%= picture %>-min.JPG" alt="Picture <%= picture %>">
       </figure>
       <% }) %>
     </div>
